--- a/_config.yml
+++ b/_config.yml
@@ -125,18 +125,24 @@ related_blog_posts:
 # category_id: DIC_kwDOIrZips4CTRSo
 #
 
-giscus:
-  repo: djherron/discussions # <your-github-user-name>/<your-github-repo-name>
-  repo_id: R_kgDOIrZipg # leave empty or specify your repo_id (see https://giscus.app/)
-  category: Comments # name of the category under which discussions will be created
-  category_id: DIC_kwDOIrZips4CTRSo # leave empty or specify your category_id (see https://giscus.app/)
-  mapping: title           # identify discussions by post title
-  strict: 1                # use strict identification mode
-  reactions_enabled: 1     # enable (1) or disable (0) emoji reactions
-  input_position: bottom   # whether to display input form below (bottom) or above (top) the comments
-  theme: preferred_color_scheme # name of the color scheme (preferred works well with al-folio light/dark mode)
-  emit_metadata: 0
-  lang: en
+# DH (May 2025): disabling giscus because, while it appears to work OK when running
+# on the local repo, on the remote repo I get an error saying
+# "giscus is not installed on this repository". And sorting it out feels complicated.
+# Perhaps I had installed the giscus app on the previous repository, but that would
+# have been lost when I deleted the old repo to create a fresh one from al-folio.
+
+#giscus:
+#  repo: djherron/discussions # <your-github-user-name>/<your-github-repo-name>
+#  repo_id: R_kgDOIrZipg # leave empty or specify your repo_id (see https://giscus.app/)
+#  category: Comments # name of the category under which discussions will be created
+#  category_id: DIC_kwDOIrZips4CTRSo # leave empty or specify your category_id (see https://giscus.app/)
+#  mapping: title           # identify discussions by post title
+#  strict: 1                # use strict identification mode
+#  reactions_enabled: 1     # enable (1) or disable (0) emoji reactions
+#  input_position: bottom   # whether to display input form below (bottom) or above (top) the comments
+#  theme: preferred_color_scheme # name of the color scheme (preferred works well with al-folio light/dark mode)
+#  emit_metadata: 0
+#  lang: en
 
 # Disqus comments (DEPRECATED)
 disqus_shortname: # put your disqus shortname
